--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="main_heading">Currency_Converter</h1>
+    <div class="main">
+        <h1 id="main_heading">Currency_Converter</h1>
+        <div id="container1">
+
+            <div id="container2">
+                <h2 id="heading1">From:</h2>
+                <input type="number" id="amount1" placeholder="Enter the amount">
+            </div>
+            <div id="container3">
+                <h2 id="heading2">To:</h2>
+                <input type="number" id="amount2" placeholder="Enter the amount">
+            </div>
+            <div id="container4">
+                <h2 id="heading3">Value to Convert:</h2>
+                <input type="number" id="value" placeholder="Enter the value">
+
+                <div class="button-group">
+                    <button id="clear">Clear</button>
+                    <button id="convert">Calculate</button>
+                </div>
+            </div>
+    </div>
+
+
 </body>
 </html>
