--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                 <div class="button-group">
                     <button id="clear">Clear</button>
-                    <button id="convert">Calculate</button>
+                    <button id="convert">Convert</button>
                 </div>
             </div>
     </div>
