--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
 </head>
 <body>
     <div class="main">
-        <h1 id="main_heading">Currency_Converter</h1>
+        <h1 id="main_heading">Currency Converter</h1>
         <div id="container1">
 
             <div id="container2">
                 <h2 id="heading1">From:</h2>
                 <input type="number" id="amount1" placeholder="Enter the amount">
             </div>
+            <div class="reverse">
+                <img src="reverse.png" alt="reverse" width="30px" height="30px">
+            </div>
             <div id="container3">
                 <h2 id="heading2">To:</h2>
                 <input type="number" id="amount2" placeholder="Enter the amount">
             </div>
+                
             <div id="container4">
                 <h2 id="heading3">Value to Convert:</h2>
                 <input type="number" id="value" placeholder="Enter the value">
@@ -30,6 +34,6 @@
             </div>
     </div>
 
-
+<script src="script.js"></script>
 </body>
 </html>
