--- a/index.html
+++ b/index.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Currency_converter</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="main">
-        <h1 id="main_heading">Currency Converter</h1>
-        <div id="container1">
-
-            <div id="container2">
-                <h2 id="heading1">From:</h2>
-                <input type="number" id="amount1" placeholder="Enter the amount">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Currency Converter</title>
+    <link href="style.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <h3>Currency Converter</h3>
+      <form>
+        <div class="amount">
+          <p>Enter Amount</p>
+          <input value="1" type="text" />
+        </div>
+        <div class="dropdown">
+          <div class="from">
+            <p>From</p>
+            <div class="select-container">
+              <img src="https://flagsapi.com/US/flat/64.png" />
+              <select name="from"></select>
             </div>
-            <div class="reverse">
-                <img src="reverse.png" alt="reverse" width="30px" height="30px">
+          </div>
+          <i class="fa-solid fa-arrow-right-arrow-left"></i>
+          <div class="to">
+            <p>To</p>
+            <div class="select-container">
+              <img src="https://flagsapi.com/IN/flat/64.png" />
+              <select name="to"></select>
             </div>
-            <div id="container3">
-                <h2 id="heading2">To:</h2>
-                <input type="number" id="amount2" placeholder="Enter the amount">
-            </div>
-                
-            <div id="container4">
-                <h2 id="heading3">Value to Convert:</h2>
-                <input type="number" id="value" placeholder="Enter the value">
-
-                <div class="button-group">
-                    <button id="clear">Clear</button>
-                    <button id="convert">Convert</button>
-                </div>
-            </div>
+          </div>
+        </div>
+        <div class="msg"></div>
+        <button>Get Exchange Rate</button>
+      </form>
     </div>
-
-<script src="script.js"></script>
-</body>
+    <script src="codes.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
